@@ -33,8 +33,9 @@ from webkitpy.mock import Mock
 from webkitpy.mock_bugzillatool import MockBugzillaTool
 from webkitpy.outputcapture import OutputCapture
 
-class UpdateChangeLogsWithReviewerTest(unittest.TestCase):
+class CloseBugForLandDiffTest(unittest.TestCase):
     def test_empty_state(self):
         capture = OutputCapture()
         step = CloseBugForLandDiff(MockBugzillaTool(), Mock())
-        capture.assert_outputs(self, step.run, [{}])
+        expected_stderr = "Committed r49824: <http://trac.webkit.org/changeset/49824>\nNo bug id provided.\n"
+        capture.assert_outputs(self, step.run, [{"commit_text" : "Mock commit text"}], expected_stderr=expected_stderr)
